// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test HighPriorityConditions should match snapshot 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-form-item has-label-tip css-1jlm9cy"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-col-11 ant-form-item-label"
        >
          <label
            class=""
            for="prefixPath_markHighPrioritySql"
            title=""
          >
            <div
              class="label-cont-custom"
            >
              <div>
                标记高优先级SQL
              </div>
              <div
                class="tip-content-box"
              >
                请设置筛选条件，符合以下任意一个已启用条件的SQL，都将被标记为高优先级
              </div>
            </div>
          </label>
        </div>
        <div
          class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="ant-switch basic-switch-wrapper css-g6dhbn"
                id="prefixPath_markHighPrioritySql"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test HighPriorityConditions should match snapshot 2`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-form-item has-label-tip css-1jlm9cy ant-form-item-has-success"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-col-11 ant-form-item-label"
        >
          <label
            class=""
            for="prefixPath_markHighPrioritySql"
            title=""
          >
            <div
              class="label-cont-custom"
            >
              <div>
                标记高优先级SQL
              </div>
              <div
                class="tip-content-box"
              >
                请设置筛选条件，符合以下任意一个已启用条件的SQL，都将被标记为高优先级
              </div>
            </div>
          </label>
        </div>
        <div
          class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="true"
                class="ant-switch basic-switch-wrapper css-g6dhbn ant-switch-checked"
                id="prefixPath_markHighPrioritySql"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
      style="margin-left: -6px; margin-right: -6px;"
    >
      <div
        class="ant-col ant-col-5 ant-col-offset-9"
        style="padding-left: 6px; padding-right: 6px;"
      >
        <span
          class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-default-tag-wrapper css-11wabdq"
        >
          <svg
            height="16"
            viewBox="0 0 20 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.5 2.5h6.667v6.667H2.5zm0 8.333h6.667V17.5H2.5zM10.833 2.5H17.5v6.667h-6.667zm0 8.333H17.5V17.5h-6.667z"
              fill="#6094FC"
            />
          </svg>
          <span>
            <div
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
            >
              审核等级
            </div>
          </span>
        </span>
      </div>
      <div
        class="ant-col ant-col-3"
        style="padding-left: 6px; padding-right: 6px;"
      >
        <div
          class="ant-form-item css-15d6abf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-24 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                    data-testid="audit_level_operator"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="prefixPath_prioritySqlConditions_audit_level_operator_list_0"
                          aria-autocomplete="list"
                          aria-controls="prefixPath_prioritySqlConditions_audit_level_operator_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="prefixPath_prioritySqlConditions_audit_level_operator_list"
                          aria-required="true"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="prefixPath_prioritySqlConditions_audit_level_operator"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title=">"
                      >
                        &gt;
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-5"
        style="padding-left: 6px; padding-right: 6px;"
      >
        <div
          class="ant-form-item css-15d6abf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-24 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                    data-testid="audit_level_value"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="prefixPath_prioritySqlConditions_audit_level_value_list_0"
                          aria-autocomplete="list"
                          aria-controls="prefixPath_prioritySqlConditions_audit_level_value_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="prefixPath_prioritySqlConditions_audit_level_value_list"
                          aria-required="true"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="prefixPath_prioritySqlConditions_audit_level_value"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="警告"
                      >
                        警告
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-vertical"
        role="separator"
        style="height: 36px; margin-left: 6px; margin-right: 12px;"
      />
      <div
        class="ant-form-item css-15d6abf"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="true"
                  class="ant-switch ant-switch-small basic-switch-wrapper css-g6dhbn ant-switch-checked"
                  data-testid="audit_level_switch"
                  id="prefixPath_prioritySqlConditions_audit_level_checked"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
      style="margin-left: -6px; margin-right: -6px;"
    >
      <div
        class="ant-col ant-col-5 ant-col-offset-9"
        style="padding-left: 6px; padding-right: 6px;"
      >
        <span
          class="ant-tag ant-tag-blue ant-tag-borderless basic-tag-wrapper basic-default-tag-wrapper css-11wabdq"
        >
          <svg
            height="16"
            viewBox="0 0 20 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.5 2.5h6.667v6.667H2.5zm0 8.333h6.667V17.5H2.5zM10.833 2.5H17.5v6.667h-6.667zm0 8.333H17.5V17.5h-6.667z"
              fill="#6094FC"
            />
          </svg>
          <span>
            <div
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
            >
              审核时间
            </div>
          </span>
        </span>
      </div>
      <div
        class="ant-col ant-col-3"
        style="padding-left: 6px; padding-right: 6px;"
      >
        <div
          class="ant-form-item css-15d6abf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-24 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input basic-input-wrapper css-1pd1cd5"
                    data-testid="audit_time_operator"
                    id="prefixPath_prioritySqlConditions_audit_time_operator"
                    placeholder=""
                    type="text"
                    value=">"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-5"
        style="padding-left: 6px; padding-right: 6px;"
      >
        <div
          class="ant-form-item css-15d6abf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-24 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input basic-input-wrapper css-1pd1cd5"
                    data-testid="audit_time_value"
                    id="prefixPath_prioritySqlConditions_audit_time_value"
                    placeholder="请输入阈值"
                    type="text"
                    value="10"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-vertical"
        role="separator"
        style="height: 36px; margin-left: 6px; margin-right: 12px;"
      />
      <div
        class="ant-form-item css-15d6abf"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-col-24 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="true"
                  class="ant-switch ant-switch-small basic-switch-wrapper css-g6dhbn ant-switch-checked"
                  data-testid="audit_time_switch"
                  id="prefixPath_prioritySqlConditions_audit_time_checked"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test HighPriorityConditions should match snapshot when submitLoading is equal true 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-form-item has-label-tip css-1jlm9cy"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-col-11 ant-form-item-label"
        >
          <label
            class=""
            for="prefixPath_markHighPrioritySql"
            title=""
          >
            <div
              class="label-cont-custom"
            >
              <div>
                标记高优先级SQL
              </div>
              <div
                class="tip-content-box"
              >
                请设置筛选条件，符合以下任意一个已启用条件的SQL，都将被标记为高优先级
              </div>
            </div>
          </label>
        </div>
        <div
          class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="ant-switch basic-switch-wrapper css-g6dhbn ant-switch-disabled"
                disabled=""
                id="prefixPath_markHighPrioritySql"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
